# otp-mcp

./: .gitignore  Dockerfile  Makefile  README.md  mcp.json  otp_mcp.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
otp_mcp/: __main__.py  server.py
